--- a/themes/fivealive/options/raspberry/css/raspberry.css
+++ b/themes/fivealive/options/raspberry/css/raspberry.css
@@ -310,9 +310,16 @@ header.header .sitetitle, header.header .sitesubtitle {
 .autotoc * {
   color: #b51360; }
 
-.autotoc .nav > li > a:hover, .autotoc .nav .nav > li > a:hover {
+.autotoc .nav > li > a:hover, .autotoc .nav .nav > li > a:hover, .autotoc .nav > li > a:focus {
   color: #f2f2f2;
   background: #61102d; }
+
+.autotoc .nav > li .active, .autotoc .nav > li.open > a {
+  color: #f2f2f2;
+  background: #61102d; }
+
+.autotoc .nav .dropdown-item {
+  color: #b51360; }
 
 #col2 .card-title, #col3 .card-title, a.flipmoduletitle, #col2 .card-secondary > .card-header a, #col3 .card-secondary > .card-header a {
   color: #e60b7f; }
